--- a/index.html
+++ b/index.html
@@ -7,6 +7,79 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    
+    <header>
+        <h1 class="main-title">KALKULATOR BMI</h1>
+   </header>
+
+    <main>
+        <aside class="aside1">
+             <!--Ini Artikel 1-->
+        <article>
+            <p>Kalkulator BMI adalah metrik standar yang digunakan
+                untuk menentukan siapa saja yang masuk dalam
+                golongan berat badan sehat dan tidak sehat.
+                Menghitung berat badan ideal membantu anda menjaga kesehatan
+                dan sebagai pengingat risiko penyakit yang mungkin mengganggu
+                kesehatan anda.
+            </p>
+        </article>
+
+        <!--Ini Form-->
+        <form>
+            <div>
+                <h3>Jenis Kelamin</h3>
+                <input type="radio" id="Pria" name="jenis-kelamin" value="Pria"><label for="Pria">Pria</label>
+                <input type="radio" id="Perempuan" name="jenis-kelamin" value="Perempuan"><label for="Perempuan">Perempuan</label>
+            </div>
+            <div>
+                <h3>Berat Badan (kg)</h3>
+                <input type="number">
+            </div>
+            <div>
+                <h3>Usia (tahun)</h3>
+                <input type="number">
+            </div>
+            <div>
+                <h3>Tinggi Badan (cm)</h3>
+                <input type="number">
+            </div>
+            <div>
+                <button class="button1">Submit</button>
+                <button>Reset</button>
+            </div>
+        </form>
+
+        <!--Ini Artikel 2-->
+        <article>
+            <h2>For Information</h2>
+            <ol>Keunggulan Fitur
+                <li>Menghitung berat badan</li>
+                <li>Menentukan kategori berat badan ideal atau tidak</li>
+                <li>Mempersiapkan program berat badan</li>
+            </ol>
+            <p>Kalkulator ini hanya digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh 
+                mengandalkan pembacaan BMI ini) dan tindakan yang harus dilakukan diambil berdasarkan nilainya
+                selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.
+            </p>
+            <p>Kalkulator akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum.
+                Indeks Massa Tubuh atau Body Mass Index (BMI) dihitung sebagai berat badan Anda (dalam kilogram)
+                dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI=Kg/M².
+            </p>
+        </article>
+        </aside>
+       
+        <!--Ini Section-->
+        <aside>
+            <section>Kalkulator ini hanya digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh 
+                mengandalkan pembacaan BMI ini) dan tindakan yang harus dilakukan diambil berdasarkan nilainya
+                selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.
+            </section>
+        </aside>
+
+    </main>
+
+    <footer>
+        <h2>Made By Angga</h2>
+    </footer>
 </body>
 </html>
