--- a/index.html
+++ b/index.html
@@ -72,14 +72,23 @@
         <!--Aside Kanan-->
         <!--Ini Area Hasil BMI-->
         <aside class="aside">
-            <section>
+            <section class="section2">
                 <div>
-                    <h2>Hasil</h2>
+                    <h2 class="h2">Hasil</h2>
                     <div style="background-color: #f0f0f0; padding: 20px; border-radius: 8px;">
                         <h3 id="bmiValue">Berat Badan Lebih</h3>
                         <h1 id="bmiNumber">23.2</h1>
                         <p id="bmiDescription">Anda memiliki berat badan berlebih</p>
                         <button>Download Hasil BMI</button>
+                    </div>
+                    <div style="margin-top: 20px;">
+                        <h3>Beberapa penyakit yang berasal dari berat badan rendah</h3>
+                        <ul>
+                            <li>Infertilitas</li>
+                            <li>Anemia</li>
+                            <li>Osteoporosis</li>
+                            <li>Sistem Imun Lemah</li>
+                        </ul>
                     </div>
                     <div style="margin-top: 20px;">
                         <h3>Beberapa penyakit yang berasal dari kegemukan</h3>
@@ -89,6 +98,29 @@
                             <li>Sakit Jantung</li>
                             <li>Osteoarthritis</li>
                         </ul>
+                    </div>
+                    <div style="text-align: justify;">
+                        <p>
+                         Indeks Massa Tubuh (BMI) sering digunakan sebagai indikator sederhana untuk mengukur
+                         keseimbangan antara berat badan dan tinggi badan seseorang. Namun, penting untuk diingat 
+                         bahwa BMI tidak sepenuhnya mencerminkan gambaran keseluruhan kesehatan tubuh seseorang. 
+                         Meskipun BMI dapat memberikan petunjuk awal mengenai apakah seseorang memiliki berat badan yang dianggap 
+                         sehat atau tidak, ini bukanlah alat diagnostik yang sempurna untuk menentukan kondisi 
+                         kesehatan atau risiko penyakit yang mungkin dihadapi.</p>                        
+                         <p>
+                         BMI tidak memperhitungkan berbagai faktor penting lainnya seperti distribusi lemak tubuh, 
+                         massa otot, komposisi tubuh, serta faktor-faktor genetik dan gaya hidup yang dapat mempengaruhi 
+                         kesehatan secara keseluruhan. Sebagai contoh, seseorang dengan massa otot yang tinggi mungkin 
+                         memiliki BMI yang lebih tinggi, tetapi itu tidak berarti mereka memiliki risiko kesehatan yang 
+                         sama dengan seseorang yang memiliki persentase lemak tubuh tinggi.
+                         </p>
+                         <p>
+                         Oleh karena itu, sangat disarankan untuk tidak hanya mengandalkan BMI sebagai satu-satunya p
+                         enilaian kesehatan. Sebagai gantinya, konsultasikan dengan profesional kesehatan untuk mendapatkan 
+                         evaluasi yang lebih komprehensif. Dengan demikian, Anda dapat mendapatkan pemahaman yang lebih 
+                         mendalam mengenai risiko kesehatan yang mungkin ada serta mendapatkan rekomendasi yang tepat terkait 
+                         berat badan dan kesehatan Anda secara keseluruhan.
+                         </p>
                     </div>
                 </div>
             </section>
