--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                 <div>
                     <h2 class="h2">Hasil</h2>
                     <div style="background-color: #f0f0f0; padding: 20px; border-radius: 8px;">
-                        <h3 id="bmiValue">Berat Badan Lebih</h3>
-                        <h1 id="bmiNumber">23.2</h1>
-                        <p id="bmiDescription">Anda memiliki berat badan berlebih</p>
+                        <h3 id="bmiValue"></h3>
+                        <h1 id="bmiNumber"></h1>
+                        <p id="bmiDescription"></p>
+                        <p id="bmiDescription2"></p>
                         <button>Download Hasil BMI</button>
                     </div>
                     <!--just information-->
