--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         <p id="bmiDescription">Anda memiliki berat badan berlebih</p>
                         <button>Download Hasil BMI</button>
                     </div>
+                    <!--just information-->
                     <div style="margin-top: 20px;">
                         <h3>Beberapa penyakit yang berasal dari berat badan rendah</h3>
                         <ul>
@@ -99,6 +100,7 @@
                             <li>Osteoarthritis</li>
                         </ul>
                     </div>
+                    <!--Ini Artikel 3-->
                     <div style="text-align: justify;">
                         <p>
                          Indeks Massa Tubuh (BMI) sering digunakan sebagai indikator sederhana untuk mengukur
@@ -128,9 +130,8 @@
     </main>
 
     <footer>
-        <h2>Made By Angga</h2>
+        <h2>Made By Angga Adhya Pratama</h2>
     </footer>
-
     <script src="js/script.js"></script>
 </body>
 </html>
