--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
             <section class="section2">
                 <div>
                     <h2 class="h2">Hasil</h2>
-                    <div style="background-color: #f0f0f0; padding: 20px; border-radius: 8px;">
-                        <h3 id="bmiValue"></h3>
-                        <h1 id="bmiNumber"></h1>
-                        <p id="bmiDescription"></p>
-                        <p id="bmiDescription2"></p>
+                    <div class="div-1">
+                        <h3 id="bmi-value"></h3>
+                        <h1 id="bmi-number"></h1>
+                        <p id="bmi-description"></p>
+                        <p id="bmi-description2"></p>
                         <button>Download Hasil BMI</button>
                     </div>
                     <!--just information-->
-                    <div style="margin-top: 20px;">
+                    <div class="div-2">
                         <h3>Beberapa penyakit yang berasal dari berat badan rendah</h3>
                         <ul>
                             <li>Infertilitas</li>
@@ -92,7 +92,7 @@
                             <li>Sistem Imun Lemah</li>
                         </ul>
                     </div>
-                    <div style="margin-top: 20px;">
+                    <div class="div-2">
                         <h3>Beberapa penyakit yang berasal dari kegemukan</h3>
                         <ul>
                             <li>Diabetes</li>
@@ -102,7 +102,7 @@
                         </ul>
                     </div>
                     <!--Ini Artikel 3-->
-                    <div style="text-align: justify;">
+                    <div class="div-3">
                         <p>
                          Indeks Massa Tubuh (BMI) sering digunakan sebagai indikator sederhana untuk mengukur
                          keseimbangan antara berat badan dan tinggi badan seseorang. Namun, penting untuk diingat 
